--- a/main.html
+++ b/main.html
@@ -8,8 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="fav_song">My current favourite song is <a href="https://www.youtube.com/watch?v=VKcG63CqB18">Hawayein by Arijit Singh.</a></div>
     <script type="text/javascript" src="./script.js">
-</script>
+</script> 
 
 </body>
 
